All_Component_DX/force-app/main/default/objects/SPM_Scheduling_Technician_Utilization__c/fields/Available_Time__c.field-meta.xml
<CustomField>
    <fullName>Available_Time__c</fullName>
    <description>Holds the available time of the technician.</description>
    <inlineHelpText>Holds the available time of the technician.</inlineHelpText>
    <label>Available Time</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>