All_Component_DX/force-app/main/default/objects/SPM_Scheduling_Technician_Utilization__c/fields/Break_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Break_Minutes__c</fullName>
    <description>Time during which the technician takes a Break.</description>
    <inlineHelpText>Time during which the technician takes a Break.</inlineHelpText>
    <label>Break Minutes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>