All_Component_DX/force-app/main/default/objects/SPM_Scheduling_Technician_Utilization__c/fields/Horizon_Date__c.field-meta.xml
<CustomField>
    <fullName>Horizon_Date__c</fullName>
    <description>Date for which the utilization is computed</description>
    <inlineHelpText>Date for which the utilization is computed</inlineHelpText>
    <label>Horizon Date</label>
    <type>Date</type>
</CustomField>