All_Component_DX/force-app/main/default/objects/SPM_Scheduling_Technician_Utilization__c/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Servicemax Jobs</description>
    <inlineHelpText>Lookup to Servicemax Jobs</inlineHelpText>
    <label>JobId</label>
    <referenceTo>SVMX_Jobs__c</referenceTo>
    <relationshipLabel>SPM Scheduling Technician Utilization</relationshipLabel>
    <relationshipName>SPM_Scheduling_Technician_Utilization</relationshipName>
    <type>Lookup</type>
</CustomField>