All_Component_DX/force-app/main/default/objects/SPM_Scheduling_Technician_Utilization__c/fields/Non_Productive_Time_Value__c.field-meta.xml
<CustomField>
    <fullName>Non_Productive_Time_Value__c</fullName>
    <description>Holds the Non-Productive Time of the technician.</description>
    <inlineHelpText>Holds the Non-Productive Time of the technician.</inlineHelpText>
    <label>Non Productive Time Value</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>