All_Component_DX/force-app/main/default/objects/SPM_Scheduling_Technician_Utilization__c/fields/Non_Work_Order_Events_Time__c.field-meta.xml
<CustomField>
    <fullName>Non_Work_Order_Events_Time__c</fullName>
    <description>Sum of duration of non work-order events</description>
    <inlineHelpText>Sum of duration of non work-order events</inlineHelpText>
    <label>Non Work Order Events Time</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>