All_Component_DX/force-app/main/default/objects/SPM_Scheduling_Technician_Utilization__c/fields/Productive_Time__c.field-meta.xml
<CustomField>
    <fullName>Productive_Time__c</fullName>
    <description>Holds the sum of productive time.</description>
    <inlineHelpText>Holds the sum of productive time.</inlineHelpText>
    <label>Productive Time</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>