All_Component_DX/force-app/main/default/objects/SPM_Scheduling_Technician_Utilization__c/fields/Service_Team__c.field-meta.xml
<CustomField>
    <fullName>Service_Team__c</fullName>
    <description>Technician Team</description>
    <inlineHelpText>Technician Team</inlineHelpText>
    <label>Service Team</label>
    <length>80</length>
    <type>Text</type>
</CustomField>