All_Component_DX/force-app/main/default/objects/SPM_Scheduling_Technician_Utilization__c/fields/SPM_Schedul_Tech_Utilization_Constraints__c.field-meta.xml
<CustomField>
    <fullName>SPM_Schedul_Tech_Utilization_Constraints__c</fullName>
    <description>Master-Details Relationship to SPM Schedul Tech Utilization Constraints table</description>
    <inlineHelpText>Master-Details Relationship to SPM Schedul Tech Utilization Constraints table</inlineHelpText>
    <label>SPM Schedul Tech Utilization Constraints</label>
    <referenceTo>SPM_Schedul_Tech_Utilization_Constraints__c</referenceTo>
    <relationshipLabel>SPM Scheduling Technician Utilization</relationshipLabel>
    <relationshipName>SPM_Scheduling_Technician_Utilization</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>