All_Component_DX/force-app/main/default/objects/SPM_Scheduling_Technician_Utilization__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Technician</description>
    <inlineHelpText>Lookup to Technician</inlineHelpText>
    <label>Technician</label>
    <referenceTo>Service_Group_Members__c</referenceTo>
    <relationshipLabel>SPM Scheduling Technician Utilization</relationshipLabel>
    <relationshipName>SPM_Scheduling_Technician_Utilization</relationshipName>
    <type>Lookup</type>
</CustomField>