All_Component_DX/force-app/main/default/objects/SPM_Scheduling_Technician_Utilization__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>Technician&apos;s Territory</description>
    <inlineHelpText>Technician&apos;s Territory</inlineHelpText>
    <label>Territory</label>
    <length>80</length>
    <type>Text</type>
</CustomField>