All_Component_DX/force-app/main/default/objects/SPM_Scheduling_Technician_Utilization__c/fields/Working_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Working_Minutes__c</fullName>
    <description>This is computed from Technician&apos;s WorkingHours Field. If empty then we consider Territory Business Hours. If Territory Business  Hours is also empty then we consider Company&apos;s Business Hours.</description>
    <inlineHelpText>This is computed from Technician&apos;s WorkingHours Field. If empty then we consider Territory Business Hours. If Territory Business  Hours is also empty then we consider Company&apos;s Business Hours.</inlineHelpText>
    <label>Working Minutes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>